Fix minor layout issue

--- a/app/assets/stylesheets/module-order.form.css.scss
+++ b/app/assets/stylesheets/module-order.form.css.scss
@@ -62,10 +62,6 @@
     margin-bottom: 0;
 }
 
-.row--submit {
-    margin-top: 40px;
-}
-
 .handmade_label {
     display: block;
     background: transparent image-url('scissors.png') no-repeat;
